# gg4_wk2

./: .gitignore  pyproject.toml  task.ipynb
report/: main.fdb_latexmk  main.fls  main.tex  main.xdv
src/gg4_wk2/: __init__.py  condition.py  condition_library.py  condition_library_illustrator.py  dataset.py  estimator.py  evaluation_illustrator.py  evaluator.py  model.py  observations.py  sampler.py  signal.py  simulation.py  simulation_library.py  simulator.py  validation.py  waveform.py
